[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
utoipa = { version = "5" }
anyhow = { version = "1.0" }
logger = { path = "../../../packages/logger/rust", version = "0.1.0" }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
	"postgres",
	# "runtime-tokio-rustls",
	# "macros",
	# "uuid",
	# "chrono"
]
